--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shinchan Webpage</title>
-    <link rel="stylesheet" href="/CSS/Day 6/style.css"
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     
     <header>
         <div class="box1">
-            <img src="/CSS/Day 4/Mini Project/Logo_shinchan.webp" alt="" class="logo">
+            <img src="/Shinchan/background/Logo_shinchan.webp" alt="" class="logo">
         </div>
         <div class="box2">
-            <img src="/CSS/Day 4/Mini Project/Shinchan name logo.webp" alt="" class="logo">
+            <img src="/Shinchan/background/Shinchan name logo.webp" alt="" class="logo">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Contact</a></li>
@@ -68,7 +68,7 @@
         <div class="big-box">
 
             <div class="box">
-                <img src="/CSS/Day 6/background/hiroshi nohara.png" alt="">
+                <img src="/Shinchan/background/hiroshi nohara.png" alt="">
                 <h2>hiroshi nohara</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque repudiandae suscipit culpa numquam mollitia, sint laudantium reprehenderit nobis modi rem?</p>
                 <button class="btn" style="margin-top: 10px;">Know More</button>
@@ -77,7 +77,7 @@
 
 
             <div class="box">
-                <img src="/CSS/Day 6/background/mitsy nohara.png" alt="">
+                <img src="/Shinchan/background/mitsy nohara.png" alt="">
                 <h2>mitsy nohara</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ipsa provident libero vero iusto nemo, facere ex ad officia repudiandae.</p>
                 <button class="btn" style="margin-top: 10px;">Know More</button>
@@ -86,7 +86,7 @@
 
 
             <div class="box">
-                <img src="/CSS/Day 6/background/himawari image.png" alt="">
+                <img src=/Shinchan/background/himawari image.png" alt="">
                 <h2>himawari nohara</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque repudiandae suscipit culpa numquam mollitia, sint laudantium reprehenderit nobis modi rem?</p>
                 <button class="btn" style="margin-top: 10px;">Know More</button>
